# youtube-analytics-project

./: pyproject.toml
homework-2/: main.py  moscowpython.json
src/: channel.py  playlist.py  video.py
